# xcgd

./: .gitignore  CMakeLists.txt  Makefile  README.md  analysis.h  derivatives_verification.cpp  physics.h  test.cpp  tetrahedral.h
cmake/: XCGDConfig.cmake.in  utils.cmake
examples/: CMakeLists.txt  Makefile  derivatives_verification.cpp  test.cpp
examples/a2d/: CMakeLists.txt  use_a2d.cpp
examples/algoim/: CMakeLists.txt  driver.py  multi_components.cpp  surface_integral.cpp  volume_integral.cpp
examples/cut_cell/: CMakeLists.txt  cut_cell.cpp
examples/cut_cell_condition_number/: CMakeLists.txt  condition_number.cpp  driver.py
examples/direct_solve/: CMakeLists.txt  direct_solve.cpp  visualize_mtx.py
examples/galerkin_difference/: CMakeLists.txt  galerkin_difference.cpp
examples/helmholtz/: CMakeLists.txt  helmholtz.cpp
examples/interpolation/: CMakeLists.txt  interpolation.cpp
examples/jacobian_vector_product/: CMakeLists.txt  Makefile  jacobian_vector_product.cpp
examples/level_set/: CMakeLists.txt  driver.py  level_set.cpp
examples/level_set_topology_optimization/: CMakeLists.txt  lbracket_mesh.h  level_set.cfg  level_set.cpp
examples/linear_elasticity/: CMakeLists.txt  linear_elasticity.cpp
examples/local_order_drop_accuracy/: CMakeLists.txt  driver.py  order_drop_study.cpp  poisson_order_drop.cpp
examples/local_order_drop_accuracy_cut/: CMakeLists.txt  cut_poisson_order_drop.cpp  driver.py
examples/mesh/: CMakeLists.txt  structured_tet_mesh.cpp
examples/nitsche_accuracy/: CMakeLists.txt  driver.py  lsf_creator.py  nitsche_accuracy.cpp
examples/pi_study/: CMakeLists.txt  driver.py  pi_study_mesh.cpp
examples/stress_functional_accuracy/: CMakeLists.txt  driver.py  stress_functional_accuracy.cpp
examples/topology_optimization/: CMakeLists.txt  analysis_verification.cpp  grad_check_step_size_study.py  lbracket_mesh.h  plot_optimization_history.py  single_element_study.cpp  test_filter.cpp  test_lbracket_mesh.cpp  test_topo.cpp  topo.cfg  topo.cpp
examples/topology_optimization/cfg/: tiny_test_cantilever.cfg
examples/two_sided/: CMakeLists.txt  two_sided.cpp
examples/vtk/: CMakeLists.txt  write_vtk.cpp
include/: analysis.h  interface_analysis.h
include/apps/: SPR.h  convolution_filter.h  helmholtz_filter.h  nitsche.h  poisson_app.h  robust_projection.h  static_elastic.h
include/elements/: commons.h  element_commons.h  element_utils.h  fe_commons.h  fe_mesh.h  fe_quadrilateral.h  fe_tetrahedral.h  galerkin_difference.h  gd_commons.h  gd_mesh.h  gd_vandermonde.h  lbracket_mesh.h  quadrilateral.h  tetrahedral.h  vandermonde_evaluator.h
include/physics/: cut_bcs.h  grad_penalization.h  helmholtz.h  integral.h  interface_physics_commons.h  linear_elasticity.h  neohookean.h  physics_commons.h  poisson.h  stress.h  volume.h
include/utils/: argparser.h  exceptions.h  json.h  linalg.h  loggers.h  mesh.h  mesher.h  misc.h  parser.h  testing.h  timer.h  vtk.h
python/: SIMP_study.py  check_condition_number.py  check_eigenvalues.py  gd_basis_study.py  pi_study.py  visualize_mtx.py
tests/: CMakeLists.txt  test_commons.h
tests/a2d/: CMakeLists.txt  test_a2d.cpp
tests/adjoint/: CMakeLists.txt  test_adjoint.cpp  test_helmholtz_adjoint.cpp  test_level_set_adjoint.cpp  test_quadrature_grad.cpp
tests/algoim/: CMakeLists.txt  test_algoim_gradient.cpp  test_algoim_gradient_1d.cpp  test_partition_identification.cpp
tests/analysis/: CMakeLists.txt  step_size_study.py  test_analysis.cpp  test_quad_level_derivs.cpp
tests/apps/: CMakeLists.txt  plot_robust_projection.py  test_convolution_filter.cpp  test_elastic_app.cpp  test_helmholtz_filter.cpp  test_nitsche.cpp  test_poisson_app.cpp  test_robust_projection.cpp
tests/derivatives_verification/: deriv_neohookean.cpp
tests/elements/: CMakeLists.txt  interp_data.h  step_size_study.py  test_element_misc.cpp  test_element_utils.cpp  test_elements.cpp  test_integration.cpp  test_interpolation.cpp  test_quadrature.cpp
tests/grid/: CMakeLists.txt  test_grid.cpp
tests/linalg/: CMakeLists.txt  linalg.cpp  test_linalg.cpp
tests/mesh/: CMakeLists.txt  lsf_dof.json  test_finite_cell_mesh.cpp  test_gd_mesh.cpp
tests/openmp/: CMakeLists.txt  test_openmp.cpp
tests/physics/: CMakeLists.txt  test_physics.cpp  test_physics_fd.cpp  test_physics_original.cpp
tests/regression/: CMakeLists.txt  data_static.json  test_regression.cpp  test_regression_static.cpp
tests/sparse_utils/: CMakeLists.txt  data.json  make_data.py  test_direct_solve.cpp
tests/stencil/: CMakeLists.txt  test_adaptive_stencil.cpp
tests/utils/: CMakeLists.txt  test_json.cpp  test_misc.cpp  test_parser.cfg  test_parser.cfg.json  test_parser.cpp
