if (XCGD_USE_OPENMP)
  link_libraries(OpenMP::OpenMP_CXX)
endif()

add_subdirectory(jacobian_vector_product)
add_subdirectory(direct_solve)
add_subdirectory(pi_study)
add_subdirectory(galerkin_difference)
add_subdirectory(vtk)
add_subdirectory(helmholtz)
add_subdirectory(algoim)
add_subdirectory(linear_elasticity)
add_subdirectory(topology_optimization)
add_subdirectory(cut_cell_condition_number)
add_subdirectory(local_order_drop_accuracy)
add_subdirectory(nitsche_accuracy)
add_subdirectory(a2d)
add_subdirectory(two_sided)
add_subdirectory(stress_functional_accuracy)
add_subdirectory(finite_cell)
